rename Deal to ActiveDeal