@@ -1,7 +1,9 @@
 package com.eatclub.deal;
 
 import com.eatclub.deal.DealRepository.Deal;
+import com.eatclub.deal.DealRepository.Restaurant;
 import com.eatclub.deal.DealRepository.Restaurants;
+import com.eatclub.deal.DealService.ActiveDeal;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -9,8 +11,11 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalTime;
+import java.util.Collections;
 import java.util.List;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -25,15 +30,50 @@ class DealServiceTest {
     private DealRepository dealRepository;
 
     @Test
-    void shouldReturnEmptyDetailsWhenNoRestaurantsInRespoitory() {
+    void shouldReturnEmptyDetailsWhenNoRestaurantsInRepository() {
         when(dealRepository.getRestaurants())
-                .thenReturn(new Restaurants(List.of()));
+                .thenReturn(new Restaurants(Collections.emptyList()));
 
-        List<DealService.Deal> deals = dealService.getDeals(LocalTime.MIDNIGHT);
+        List<ActiveDeal> deals = dealService.getDeals(LocalTime.MIDNIGHT);
 
         verify(dealRepository).getRestaurants();
 
         assertTrue(deals.isEmpty(), "Deals list should be empty when repository has no restaurants");
+    }
+
+    @Test
+    void shouldReturnSingleDetailsWhenSingleRestaurantHasActiveLightningDealInRepository() {
+        when(dealRepository.getRestaurants())
+                .thenReturn(new Restaurants(List.of(
+                        new Restaurant(
+                                "restaurantObjectId",
+                                "Restaurant Name",
+                                "123 Main St",
+                                "Suburb",
+                                Collections.emptyList(),
+                                List.of(
+                                        new Deal(
+                                                "dealObjectId",
+                                                20,
+                                                false,
+                                                true,
+                                                new Time(LocalTime.of(10, 0)),
+                                                new Time(LocalTime.of(14, 0)),
+                                                5
+                                        )
+                                ),
+                                new Time(LocalTime.of(9, 0)),
+                                new Time(LocalTime.of(21, 0))
+                        )
+                )));
+
+        List<ActiveDeal> deals = dealService.getDeals(LocalTime.of(13, 0));
+
+        verify(dealRepository).getRestaurants();
+
+        assertFalse(deals.isEmpty(), "Deals list should not be empty when repository has active lightning deals");
+        assertEquals(1, deals.size(), "Deals list should contain one deal");
+        assertEquals("restaurantObjectId", deals.getFirst().restaurantObjectId());
     }
 
     private static Deal createDeal() {
